# VoiceTranscriber-telegram-bot

./: .env.example  LICENSE  README.md  bot.py  main.py  mypy.ini  pyproject.toml  ruff.toml
