[project]
name = "voicetranscription-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "ffmpeg-python>=0.2.0",
    "grog>=0.93",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]
