[project]
name = "voicetranscription-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cffi>=2.0.0",
    "fastapi>=0.121.1",
    "ffmpeg-python>=0.2.0",
    "grog>=0.93",
    "groq>=0.33.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]
